--- a/kubernetes/gateway.yaml
+++ b/kubernetes/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: chat-gateway
+  name: service-gateway
 spec:
   selector:
     istio: ingressgateway # use istio default controller
