--- a/kubernetes/virtualservice-fe.yaml
+++ b/kubernetes/virtualservice-fe.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: ${SERVICE_NAME}
+  name: ${SERVICE_NAME}-fe
 spec:
   hosts:
   - "*"
@@ -10,7 +10,9 @@ spec:
   http:
   - match:
     - uri:
-        exact: /api/channels
+        prefix: "/frontend/"
+    rewrite:
+      uri: "/"
     route:
     - destination:
         host: ${SERVICE_NAME}
